Added game link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>The Tribes</title>
 </head>
 <body>
+    <div class="banner">
+        <a href="https://cozar1.itch.io/the-tribes-pre-alpha-v1">Pre-Alpha out now! at https://cozar1.itch.io/the-tribes-pre-alpha-v1</a>
+    </div>
+
     <header>
         <h1>THE TRIBES</h1>
         <nav>
