--- a/updates.html
+++ b/updates.html
@@ -33,6 +33,13 @@
             </p>
             <hr>
         </div>
+        <div class="updates" >            
+            <a href="updates/28_10_2024.html">Bullet-Time, Bark & Bulky men</a><date>(28/10/2024)</date><br>
+            <p class="description">
+                In this update I added bullet-time mechanics, an updated tree monster and the first npc.
+            </p>
+            <hr>
+        </div>
         <!-- Repeat the article block for more posts -->
     </main>
     <footer>
