Alpha Pre release v2

--- a/timeline.html
+++ b/timeline.html
@@ -28,27 +28,26 @@
         <div class="timeline">            
             <section>
                 
-                <date>(23/10/2024)</date>
-                <h2>Created Website</h2>
+                <date>(17/10/2024)</date>
+                <h2>Created The Tribes</h2>
                 <description>
-                    Programmed the first iteration of the tribes website with
-                    a home,downloads,wiki, and updates page.
+                    The starting of the best game to ever be made
                 </description>
                 <p>|</p>
                 <p>|</p>
 
-                <date>(24/10/2024)</date>
-                <h2>Updated website</h2>
+                <date>(28/10/2024)</date>
+                <h2>Alpha Pre-Release V1 Release</h2>
                 <description>
-                    Added detail to the pages including home,timeline and wiki.
+                    A very basic version of the tribes was released to the public
                 </description>
                 <p>|</p>
                 <p>|</p>
 
-                <date>(25/10/2024)</date>
-                <h2>Added Vector Icons</h2>
+                <date>(3/11/2024)</date>
+                <h2>Alpha Pre-Release V2 Release (Item Overhaul)</h2>
                 <description>
-                    Created and added some vecotr icons into the game
+                    Overhauled item mech with new raytracing systems
                 </description>
                 <p>|</p>
                 <p>|</p>
