--- a/updates.html
+++ b/updates.html
@@ -40,6 +40,21 @@
             </p>
             <hr>
         </div>
+        <div class="updates" >            
+            <a href="updates/1_11_2024.html">Ultimate Item Revamp!</a><date>(1/11/2024)</date><br>
+            <p class="description">
+                In this update I rewrote the entire item system to be more optimised and intuitive
+            </p>
+            <hr>
+        </div>
+        <div class="updates" >            
+            <a href="updates/2_11_2024.html">Loading...</a><date>(2/11/2024)</date><br>
+            <p class="description">
+                In this update I Re-invented the pause and start screen as well as adding a loading screen
+            </p>
+            <hr>
+        </div>
+
         <!-- Repeat the article block for more posts -->
     </main>
     <footer>
